[package]
name = "apex-rs"
version = "0.1.0"
authors = ["Nils Pukropp <nils@nirusu.codes>"]
edition = "2021"
license-file ="LICENSE.md"
description = "A simple wrapper for the official apex api"
homepage = "https://github.com/Nirusu99/apex-rs"
repository = "https://github.com/Nirusu99/apex-rs"
readme = "README.md"

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
url = "2"
